styles: niluk project added and fully designed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="img/favicon-eddieos.png"/>
@@ -503,8 +503,8 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 research develop design">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="zoom_image" href="img/projects/mentions/mentions-preview.png">
-                                        <img class="img-fluid" src="img/projects/mentions/mentions-preview.png" alt="">
+                                    <a class="zoom_image" href="img/projects/mentions/mentions-preview.jpg">
+                                        <img class="img-fluid" src="img/projects/mentions/mentions-preview.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
