--- a/projects/niluk.html
+++ b/projects/niluk.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="../img/favicon-eddieos.png"/>
@@ -43,7 +43,6 @@
     }
 
     .phone-carousel .app-screen {
-        box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.07);
         transform: scale(0.85);
         transition: all 0.3s ease-in;
     }
@@ -55,12 +54,12 @@
 
 <body class="project">
 <!-- begin of preloader -->
-<div class="preloader">
-    <div class="line_loader"></div>
-    <p>loading</p>
-</div>
-<div class="overlay2"></div>
-<div class="overlay"></div>
+<!--<div class="preloader">-->
+<!--    <div class="line_loader"></div>-->
+<!--    <p>loading</p>-->
+<!--</div>-->
+<!--<div class="overlay2"></div>-->
+<!--<div class="overlay"></div>-->
 <!-- end of preloader -->
 
 <!-- begin of main wrapper -->
@@ -116,9 +115,7 @@
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">The Problem</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">DevCenter is a community in Nigeria that offers good connections
-                                between designer/developers and clients. DevCenter needed an official website for Ligare
-                                and had done the User Interface Design.
+                            <p class="blog_text_head">Tunga is a great software development outsourcing organization.  They offer great access to Top-level designers and developers. Niluk will be a mobile app, with the aim to facilitate meaningful social contact.
                             </p>
                         </div>
                     </div>
@@ -139,7 +136,7 @@
                             </div>
                             <div class="col-md-3">
                                 <h5>Client</h5>
-                                <p>GlossKode Technologies</p>
+                                <p>Tunga and Niluk</p>
                             </div>
                             <div class="col-md-6">
                                 <h5>Team Members</h5>
@@ -198,9 +195,15 @@
                     </div>
                     <div class="col-lg-10 m-auto">
                         <div class="owl-carousel phone-carousel">
-                            <img class="app-screen img-fluid" src="../img/projects/niluk/screen1.jpg" alt="image">
-                            <img class="app-screen img-fluid" src="../img/projects/niluk/screen2.jpg" alt="image">
-                            <img class="app-screen img-fluid" src="../img/projects/niluk/screen3.jpg" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/app-screens/onboard.png" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/app-screens/home.png" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/app-screens/map-view.png" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/app-screens/add-event.png" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/app-screens/friends.png" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/app-screens/bookmarks.png" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/app-screens/notifications.png" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/app-screens/profile.png" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/app-screens/login.png" alt="image">
                         </div>
                     </div>
 
@@ -226,8 +229,7 @@
                         <div class="testimonial_item d-flex">
                             <p class="testimonial_quote mbri-quote-left mr-3"></p>
                             <div>
-                                <h5>Atque minima voluptate animi provident adipisci laudantium magni harum nulla.
-                                    Consequuntur architecto aliquid distinctio doloribus molestiae facere dolorum.</h5>
+                                <h5>Thanks Eddieos.</h5>
                                 <p>Elena <span>(Niluk)</span></p>
                             </div>
                             <p class="testimonial_quote mbri-quote-right"></p>
@@ -247,7 +249,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12">
-                    <p>&copy; Copyright 2019 - <a href="index.html">eddieos.me</a></p>
+                    <p>&copy; Copyright 2019 - <a href="../index.html">eddieos.me</a></p>
                 </div>
                 <div class="col-md-7 col-sm-12">
                     <ul class="footer_nav">
