--- a/projects/ojirehprime.html
+++ b/projects/ojirehprime.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="../img/favicon-eddieos.png"/>
@@ -93,7 +93,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12 col-md-12">
-                        <h2 class="single_blog_title mb-5">Ligare Website Interface Development</h2>
+                        <h2 class="single_blog_title mb-5">OjirehPrime Mobile App</h2>
                         <h4 class="mt-2"><span class="mbri-file overview-icon"></span>Overview</h4>
                     </div>
                 </div>
@@ -101,17 +101,14 @@
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">The Problem</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">DevCenter is a community in Nigeria that offers good connections
-                                between designer/developers and clients. DevCenter needed an official website for Ligare
-                                and had done the User Interface Design.
+                            <p class="blog_text_head">OjirehPrime Financial Services limited is a <b>Fintech startup</b> committed to providing alternative banking services to the regular bank card for the urban dweller who does not want to expose his/her bank cards during online transactions.
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">What I did</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">Developed the interface provided by the designer pixel for pixel.
-                                Responsive web design, writing codes to support a wide range of screen sizes.</p>
+                            <p class="blog_text_head">Designed <b>User Interface</b> for OjirehPrime mobile application based on OjirehPrime product team requirements</p>
                         </div>
                     </div>
                 </div>
@@ -120,18 +117,18 @@
                         <div class="row mb-3">
                             <div class="col-md-3">
                                 <h5>Services</h5>
-                                <p>UI Development</p>
+                                <p>U.I/U.X Design</p>
                             </div>
                             <div class="col-md-3">
                                 <h5>Client</h5>
-                                <p>DevCenter</p>
+                                <p>OjirehPrime</p>
                             </div>
                             <div class="col-md-6">
                                 <h5>Team Members</h5>
                                 <p>Endurance Ekhoragbon <a href="http://www.eddieos.me/" target="_blank"><span
                                         class="mbri-link"></span></a><br>
                                     <small>
-                                        (U.I/U.X Developer)
+                                        (U.I/U.X Designer)
                                     </small>
                                 </p>
                                 <p>OjirehPrime Team<br>
@@ -146,7 +143,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <h5>Tech Stack</h5>
-                                <p>Angular, HTML, CSS/SCSS</p>
+                                <p>Sketch App, Marvel</p>
                             </div>
                             <div class="col-md-4">
                                 <h5>Platform</h5>
@@ -214,9 +211,8 @@
                         <div class="testimonial_item d-flex">
                             <p class="testimonial_quote mbri-quote-left mr-3"></p>
                             <div>
-                                <h5>Atque minima voluptate animi provident adipisci laudantium magni harum nulla.
-                                    Consequuntur architecto aliquid distinctio doloribus molestiae facere dolorum.</h5>
-                                <p>Will Marvin <span>(Opticon Limited)</span></p>
+                                <h5>Thanks Eddieos.</h5>
+                                <p>Edoka Idoko <span>(OjirehPrime)</span></p>
                             </div>
                             <p class="testimonial_quote mbri-quote-right"></p>
 
@@ -234,7 +230,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12">
-                    <p>&copy; Copyright 2019 - <a href="index.html">eddieos.me</a></p>
+                    <p>&copy; Copyright 2019 - <a href="../index.html">eddieos.me</a></p>
                 </div>
                 <div class="col-md-7 col-sm-12">
                     <ul class="footer_nav">
