--- a/projects/glosscare.html
+++ b/projects/glosscare.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="../img/favicon-eddieos.png"/>
@@ -239,7 +239,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12">
-                    <p>&copy; Copyright 2019 - <a href="index.html">eddieos.me</a></p>
+                    <p>&copy; Copyright 2019 - <a href="../index.html">eddieos.me</a></p>
                 </div>
                 <div class="col-md-7 col-sm-12">
                     <ul class="footer_nav">
