--- a/projects/project_template_1.html
+++ b/projects/project_template_1.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="../img/favicon-eddieos.png"/>
