--- a/projects/niluk.html
+++ b/projects/niluk.html
@@ -12,7 +12,13 @@
     <meta name="viewport" content="width=device-width, user-scalable=no"/>
 
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="../img/favicon-eddieos.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="manifest" href="../site.webmanifest">
+    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#2564e4">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
     <!-- title -->
     <title>eddieos | U.I/U.X Designer and Developer.</title>
     <!-- =====================================
@@ -54,12 +60,12 @@
 
 <body class="project">
 <!-- begin of preloader -->
-<!--<div class="preloader">-->
-<!--    <div class="line_loader"></div>-->
-<!--    <p>loading</p>-->
-<!--</div>-->
-<!--<div class="overlay2"></div>-->
-<!--<div class="overlay"></div>-->
+<div class="preloader">
+    <div class="line_loader"></div>
+    <p>loading</p>
+</div>
+<div class="overlay2"></div>
+<div class="overlay"></div>
 <!-- end of preloader -->
 
 <!-- begin of main wrapper -->
