--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
 </div><!--end wrapper-->
 <script type="text/javascript" src="js/jquery.placeholder.js"></script>
 <!-- placeholder html5 tag support for IE and Old Browsers -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-49184917-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-49184917-3');
+</script>
+
 </body>
 </html>
 
