--- a/projects/ligare_web_app.html
+++ b/projects/ligare_web_app.html
@@ -46,12 +46,12 @@
 
 <body class="project">
 <!-- begin of preloader -->
-<!--<div class="preloader">-->
-<!--    <div class="line_loader"></div>-->
-<!--    <p>loading</p>-->
-<!--</div>-->
-<!--<div class="overlay2"></div>-->
-<!--<div class="overlay"></div>-->
+<div class="preloader">
+    <div class="line_loader"></div>
+    <p>loading</p>
+</div>
+<div class="overlay2"></div>
+<div class="overlay"></div>
 <!-- end of preloader -->
 
 <!-- begin of main wrapper -->
@@ -263,6 +263,13 @@
 <script src="../js/plugins.js"></script>
 <!-- Main JS -->
 <script src="../js/main.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-49184917-3"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-49184917-3');
+</script>
 </body>
 
 </html>
