--- a/projects/pallmax.html
+++ b/projects/pallmax.html
@@ -270,6 +270,13 @@
 <script src="../js/plugins.js"></script>
 <!-- Main JS -->
 <script src="../js/main.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-49184917-3"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-49184917-3');
+</script>
 </body>
 
 </html>
