styles: page updated

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                             <span class="cd-words-wrapper">
                                     <b class="is-visible">U.I Designer</b>
                                     <b>U.X Designer</b>
+                                    <b>Product Designer</b>
                                 </span>
                         </h3>
                         <h3 class="cd-headline-anim cd-headline clip d-inline">
@@ -107,7 +108,7 @@
                             <span class="cd-words-wrapper">
                                     <b class="is-visible">Developer</b>
                                     <b>Researcher</b>
-                                    <b></b>
+                                    <b>Owner</b>
                                 <!--<b>Explorer</b>-->
                                 </span>
                         </h3>
@@ -638,14 +639,12 @@
                             </h5>
                             <p>Elijah Atuhaire <span>(Project Manager Tunga)</span></p>
                         </div>
-                        <!--                        <div class="testimonial_item">-->
-                        <!--                            <h5>-->
-                        <!--                                "Eddieos takes to heart the need of end users and at the same time does his best-->
-                        <!--                                to-->
-                        <!--                                interpret what the client provides to deliver meaningful UX designs"-->
-                        <!--                            </h5>-->
-                        <!--                            <p>David <span>(GlossKode Tech)</span></p>-->
-                        <!--                        </div>-->
+                        <div class="testimonial_item">
+                            <h5>
+                                "Endurance is a creative user interface developer who is always able to picture every project as though he's the user and this makes him pay attention to every detail.."
+                            </h5>
+                            <p>David <span>(GlossKode Tech)</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
