--- a/projects/glosscare.html
+++ b/projects/glosscare.html
@@ -225,9 +225,8 @@
                         <div class="testimonial_item d-flex">
                             <p class="testimonial_quote mbri-quote-left mr-3"></p>
                             <div>
-                                <h5>Atque minima voluptate animi provident adipisci laudantium magni harum nulla.
-                                    Consequuntur architecto aliquid distinctio doloribus molestiae facere dolorum.</h5>
-                                <p>Akinfals <span>(DevCenter)</span></p>
+                                <h5>"Endurance is a creative user interface developer who is always able to picture every project as though he's the user and this makes him pay attention to every detail.."</h5>
+                                <p>David <span>(GlossKode Tech)</span></p>
                             </div>
                             <p class="testimonial_quote mbri-quote-right"></p>
 
