styles: typo fix

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 </span>
                         </h3>
                         <h3 class="cd-headline-anim cd-headline clip d-inline">
-                            <span>&amp; a</span>
+                            <span>&amp;</span>
                             <span class="cd-words-wrapper">
                                     <b class="is-visible">Developer</b>
                                     <b>Researcher</b>
