styles: easysolar website project added

--- a/index.html
+++ b/index.html
@@ -482,17 +482,16 @@
                         </div>
 
                         <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 develop research">
+                        <div class="col-lg-4 col-md-6 col-sm-6 research develop design">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="zoom_image" href="img/projects/glosscare/glosscare-preview.png">
-                                        <img class="img-fluid" src="img/projects/glosscare/glosscare-preview.png"
-                                             alt="">
+                                    <a class="" href="projects/easysolar_website.html">
+                                        <img class="img-fluid" src="img/projects/easysolar-website/easysolar-website-preview.jpg" alt="">
                                     </a>
                                 </div>
                                 <div class="work_item_info">
-                                    <h4>Glosscare+</h4>
-                                    <p>U.X Design and development</p>
+                                    <h4>EasySolar <br> Website</h4>
+                                    <p>U.I development</p>
                                 </div>
                             </div>
                         </div>
@@ -546,6 +545,21 @@
                         <!--                        </div>-->
 
                         <!-- work single item -->
+                        <div class="col-lg-4 col-md-6 col-sm-6 develop research">
+                            <div class="work_single_item">
+                                <div class="work_image">
+                                    <a class="zoom_image" href="img/projects/glosscare/glosscare-preview.png">
+                                        <img class="img-fluid" src="img/projects/glosscare/glosscare-preview.png"
+                                             alt="">
+                                    </a>
+                                </div>
+                                <div class="work_item_info">
+                                    <h4>Glosscare+</h4>
+                                    <p>U.X Design and development</p>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-lg-4 col-md-6 col-sm-6 research develop design">
                             <div class="work_single_item">
                                 <div class="work_image">
