styles: typo fix

--- a/projects/easysolar_website.html
+++ b/projects/easysolar_website.html
@@ -182,7 +182,7 @@
 
                     <div class="col-lg-6 col-md-6 mb-4 text-center">
                         <p>Developed page interface pixel for pixel based on EasySolar's company <span
-                                class="text-nowrap">User Interface Designs.</span> using Angular, HTML and CSS/SCSS</p>
+                                class="text-nowrap">User Interface Designs.</span> using ReactJs, HTML and CSS/SCSS</p>
 
                     </div>
 
