styles: linkedIn preview update

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta property='og:title' content='eddieos | U.I/U.X Designer and Developer.'/>
+    <meta property='og:image' content='https://www.eddieos.me/img/cover-photo/cartooned.jpg'/>
+    <meta property='og:description' content='U.I/U.X Designer and Developer.'/>
+    <meta property='og:url' content='https://www.eddieos.me/'/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content=" U.I/U.X Designer and Developer.">
+    <meta name="description" content="U.I/U.X Designer and Developer. ">
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
