styles: linkedIn preview updated

--- a/projects/project_template.html
+++ b/projects/project_template.html
@@ -4,11 +4,17 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta property='og:title' content='eddieos | Product Designer and U.X Engineer.'/>
+    <meta property='og:image' content='https://www.eddieos.me/img/cover-photo/cartooned.jpg'/>
+    <meta property='og:description' content='eddieos | Product Designer and U.X Engineer.'/>
+    <meta property='og:url' content='https://www.eddieos.me/'/>
+    <meta property='og:u' content='https://www.eddieos.me/'/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="qrop - Creative Personal Portfolio Template.">
-    <meta name="keywords" content="Portfolio, Personal, Creative, Qrop, Html Template, Portfolio Template">
-    <meta name="author" content="ixTheme">
+    <meta name="description" content="eddieos | Product Designer and U.X Engineer.">
+    <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
+    <meta name="author" content="eddieos | Product Designer and U.X Engineer.">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="../img/favicon.png" />
@@ -132,7 +138,7 @@
                                             <p class="full_comment">Consectetur adipisicing elit. Eligendi dolores, temporibus assumenda molestiae accusantium doloremque ipsa atque omnis. Adipisci eum sed optio fugiat tempore accusantium dolore doloribus alias pariatur culpa non.
                                                 <br> <a class="qrop_btn" href="#">Reply</a>
                                             </p>
-        
+
                                             <div class="media">
                                                 <img class="mr-3" src="../img/blog_user_02.jpg" alt="">
                                                 <div class="media-body">
