--- a/projects/project_template_1.html
+++ b/projects/project_template_1.html
@@ -4,12 +4,17 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta property='og:title' content='eddieos | Product Designer and U.X Engineer.'/>
+    <meta property='og:image' content='https://www.eddieos.me/img/cover-photo/cartooned.jpg'/>
+    <meta property='og:description' content='eddieos | Product Designer and U.X Engineer.'/>
+    <meta property='og:url' content='https://www.eddieos.me/'/>
+    <meta property='og:u' content='https://www.eddieos.me/'/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content=" U.I/U.X Designer and Developer.">
+    <meta name="description" content="eddieos | Product Designer and U.X Engineer.">
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
-    <meta name="author" content="eddieos">
+    <meta name="author" content="eddieos | Product Designer and U.X Engineer.">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="../img/favicon-eddieos.png"/>
