--- a/index.html
+++ b/index.html
@@ -198,11 +198,20 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".05s">
                             <div class="experience_single">
-                                <h4>CLANE Limited <a href="http://www.clane.me/" target="_blank"><span
+                                <h4>Easy Solar <a href="https://easysolar.org/" target="_blank"><span
+                                        class="mbri-link"></span></a></h4>
+                                <p>Design Lead</p>
+                                <p>Dec, 2019 - Now</p>
+                                <p>Remote</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".05s">
+                            <div class="experience_single">
+                                <h4>CLANE Limited <a href="http://www.clane.com/" target="_blank"><span
                                         class="mbri-link"></span></a></h4>
                                 <p>U.I/U.X Designer and Developer</p>
                                 <p>Aug, 2018 - Now</p>
-                                <p>Lagos, Nigeria</p>
+                                <p>Remote</p>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".25s">
@@ -717,7 +726,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12">
-                    <p>&copy; Copyright 2020 - <a href="index.html">eddieos.me</a></p>
+                    <p>&copy; Copyright 2021 - <a href="index.html">eddieos.me</a></p>
                 </div>
                 <div class="col-md-7 col-sm-12">
                     <ul class="footer_nav">
