styles: job update

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                 <h4>CLANE Limited <a href="http://www.clane.com/" target="_blank"><span
                                         class="mbri-link"></span></a></h4>
                                 <p>U.I/U.X Designer and Developer</p>
-                                <p>Aug, 2018 - Now</p>
+                                <p>Aug, 2018 - Feb, 2021</p>
                                 <p>Remote</p>
                             </div>
                         </div>
