styles: updated education

--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".05s">
                             <div class="education_single">
+                                <h4>GradCert. User Experience (UX) Design</h4>
+                                <p>Humber College</p>
+                                <p>2022 - Now</p>
+                                <p>Ontario, Canada</p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".05s">
+                            <div class="education_single">
                                 <h4>Membership Certificate</h4>
                                 <p>The Interaction Design Foundation</p>
                                 <p>2018 - Now</p>
@@ -276,7 +284,7 @@
                         </div>
                         <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".15s">
                             <div class="education_single xsm-mt-30">
-                                <h4>Computer Science</h4>
+                                <h4>BSc. Computer Science</h4>
                                 <p>University of Benin</p>
                                 <p>2015</p>
                                 <p>Benin, Nigeria</p>
