styles: website updated with projects

--- a/index.html
+++ b/index.html
@@ -551,20 +551,20 @@
                         </div>
 
                         <!-- work single item -->
-                        <!--                        <div class="col-lg-4 col-md-6 col-sm-6 research design">-->
-                        <!--                            <div class="work_single_item">-->
-                        <!--                                <div class="work_image">-->
-                        <!--                                    <a class="" href="projects/ojirehprime.html">-->
-                        <!--                                        <img class="img-fluid" src="img/projects/ojirehprime/ojirehprime-preview.png"-->
-                        <!--                                             alt="">-->
-                        <!--                                    </a>-->
-                        <!--                                </div>-->
-                        <!--                                <div class="work_item_info">-->
-                        <!--                                    <h4>OjirehPrime</h4>-->
-                        <!--                                    <p>U.I/U.X Design</p>-->
-                        <!--                                </div>-->
-                        <!--                            </div>-->
-                        <!--                        </div>-->
+                        <div class="col-lg-4 col-md-6 col-sm-6 research design">
+                            <div class="work_single_item">
+                                <div class="work_image">
+                                    <a class="" href="projects/ojirehprime.html">
+                                        <img class="img-fluid" src="img/projects/ojirehprime/ojirehprime-preview.png"
+                                             alt="">
+                                    </a>
+                                </div>
+                                <div class="work_item_info">
+                                    <h4>OjirehPrime</h4>
+                                    <p>U.I/U.X Design</p>
+                                </div>
+                            </div>
+                        </div>
 
                         <!-- work single item -->
                         <div class="col-lg-4 col-md-6 col-sm-6 develop research">
@@ -740,7 +740,7 @@
                     <ul class="footer_nav">
                         <li><a href="https://www.facebook.com/ekhoragbon.endurance">Facebook</a></li>
                         <li><a href="https://twitter.com/eddieosuiux">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/eddieosas">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/iam_eddieos/">Instagram</a></li>
                         <li><a href="https://dribbble.com/eddieos">Dribbble</a></li>
                         <li><a href="https://www.behance.net/eddieos">Behance</a></li>
                     </ul>
