--- a/projects/crusader_sterling.html
+++ b/projects/crusader_sterling.html
@@ -174,7 +174,7 @@
                             </div>
                             <div class="col-md-4">
                                 <h5>Status</h5>
-                                <p>Completed</p>
+                                <p>Completed - <b>2018</b></p>
                                 <p>
                                     <a href="https://play.google.com/store/apps/details?id=com.glosskode.crusader&hl=en"
                                        target="_blank" class="btn btn-success"><span class="mbri-android"></span></a>
@@ -257,7 +257,7 @@
                     <ul class="footer_nav">
                         <li><a href="https://www.facebook.com/ekhoragbon.endurance">Facebook</a></li>
                         <li><a href="https://twitter.com/eddieosuiux">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/eddieosas">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/iam_eddieos/">Instagram</a></li>
                         <li><a href="https://dribbble.com/eddieos">Dribbble</a></li>
                         <li><a href="https://www.behance.net/eddieos">Behance</a></li>
                     </ul>
