--- a/projects/niluk.html
+++ b/projects/niluk.html
@@ -179,7 +179,7 @@
                             </div>
                             <div class="col-md-4">
                                 <h5>Status</h5>
-                                <p>Beta Stage</p>
+                                <p>Beta Stage - <b>2020</b></p>
                                 <p>
                                     <a href="https://niluk.app" target="_blank"
                                        class="btn btn-info"><span class="mbri-globe"></span></a>
@@ -266,7 +266,7 @@
                     <ul class="footer_nav">
                         <li><a href="https://www.facebook.com/ekhoragbon.endurance">Facebook</a></li>
                         <li><a href="https://twitter.com/eddieosuiux">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/eddieosas">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/iam_eddieos/">Instagram</a></li>
                         <li><a href="https://dribbble.com/eddieos">Dribbble</a></li>
                         <li><a href="https://www.behance.net/eddieos">Behance</a></li>
                     </ul>
