--- a/projects/ojirehprime.html
+++ b/projects/ojirehprime.html
@@ -162,10 +162,10 @@
                                 <p>Android Mobile</p>
                             </div>
                             <div class="col-md-4">
-                                <h5>Status</h5>
+                                <h5>Status - <b>2019</b></h5>
                                 <p>In development</p>
                                 <p>
-                                    <a href="https://marvelapp.com/b64hd0h" target="_blank"
+                                    <a href="https://marvelapp.com/prototype/b64hd0h/screens" target="_blank"
                                        class="btn btn-outline-info"><span class="mbri-cursor-click"></span></a>
                                     <a href="#"
                                        target="_blank" class="btn btn-success"><span class="mbri-android"></span></a>
@@ -247,7 +247,7 @@
                     <ul class="footer_nav">
                         <li><a href="https://www.facebook.com/ekhoragbon.endurance">Facebook</a></li>
                         <li><a href="https://twitter.com/eddieosuiux">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/eddieosas">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/iam_eddieos/">Instagram</a></li>
                         <li><a href="https://dribbble.com/eddieos">Dribbble</a></li>
                         <li><a href="https://www.behance.net/eddieos">Behance</a></li>
                     </ul>
