--- a/projects/project_template_1.html
+++ b/projects/project_template_1.html
@@ -243,7 +243,7 @@
                     <ul class="footer_nav">
                         <li><a href="https://www.facebook.com/ekhoragbon.endurance">Facebook</a></li>
                         <li><a href="https://twitter.com/eddieosuiux">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/eddieosas">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/iam_eddieos/">Instagram</a></li>
                         <li><a href="https://dribbble.com/eddieos">Dribbble</a></li>
                         <li><a href="https://www.behance.net/eddieos">Behance</a></li>
                     </ul>
