--- a/projects/easysolar_website.html
+++ b/projects/easysolar_website.html
@@ -144,7 +144,7 @@
                                     </small>
                                 </p>
                                 <p>Thierno Souleymane Diallo <a
-                                        href=""
+                                        href="https://www.linkedin.com/in/thiernomoudou/"
                                         target="_blank"><span class="mbri-link"></span></a><br>
                                     <small>
                                         (Full Stack Developer)
@@ -165,7 +165,7 @@
                             </div>
                             <div class="col-md-4">
                                 <h5>Status</h5>
-                                <p>Completed</p>
+                                <p>Completed - <b>2020</b></p>
                                 <p>
                                     <a href="http://www.easysolar.org/" target="_blank"
                                        class="btn btn-info"><span class="mbri-globe"></span></a>
@@ -245,7 +245,7 @@
                     <ul class="footer_nav">
                         <li><a href="https://www.facebook.com/ekhoragbon.endurance">Facebook</a></li>
                         <li><a href="https://twitter.com/eddieosuiux">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/eddieosas">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/iam_eddieos/">Instagram</a></li>
                         <li><a href="https://dribbble.com/eddieos">Dribbble</a></li>
                         <li><a href="https://www.behance.net/eddieos">Behance</a></li>
                     </ul>
