--- a/projects/ligare_web.html
+++ b/projects/ligare_web.html
@@ -167,7 +167,7 @@
                             </div>
                             <div class="col-md-4">
                                 <h5>Status</h5>
-                                <p>Completed</p>
+                                <p>Completed - <b>2019</b></p>
                                 <p>
                                     <a href="https://www.ligareapp.com/" target="_blank"
                                        class="btn btn-info"><span class="mbri-globe"></span></a>
@@ -247,7 +247,7 @@
                     <ul class="footer_nav">
                         <li><a href="https://www.facebook.com/ekhoragbon.endurance">Facebook</a></li>
                         <li><a href="https://twitter.com/eddieosuiux">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/eddieosas">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/iam_eddieos/">Instagram</a></li>
                         <li><a href="https://dribbble.com/eddieos">Dribbble</a></li>
                         <li><a href="https://www.behance.net/eddieos">Behance</a></li>
                     </ul>
