styles: website update with google tag manager and copyright year

--- a/projects/project_template_1.html
+++ b/projects/project_template_1.html
@@ -237,7 +237,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12">
-                    <p>&copy; Copyright 2022 - <a href="index.html">eddieos.me</a></p>
+                    <p>&copy; Copyright 2023 - <a href="index.html">eddieos.me</a></p>
                 </div>
                 <div class="col-md-7 col-sm-12">
                     <ul class="footer_nav">
@@ -266,12 +266,12 @@
 <script src="../js/plugins.js"></script>
 <!-- Main JS -->
 <script src="../js/main.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-49184917-3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4THYE1VCLE"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-49184917-3');
+    gtag('config', 'G-4THYE1VCLE');
 </script>
 </body>
 
