--- a/projects/project_template.html
+++ b/projects/project_template.html
@@ -225,12 +225,12 @@
     <script src="../js/plugins.js"></script>
     <!-- Main JS -->
     <script src="../js/main.js"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-49184917-3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4THYE1VCLE"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-49184917-3');
+    gtag('config', 'G-4THYE1VCLE');
 </script>
 </body>
 
